--- a/2boxModel/widtch_height.html
+++ b/2boxModel/widtch_height.html
@@ -31,9 +31,10 @@
 
         <h2> Widtch and Height</h2>
 
-        <p> Lorem ipsum dolor sit amet.</p>
+        <p> aLorem ipsum dolor sit amet.</p>
         <p> Lorem ipsum dolor sit amet.</p>
         <p> Lorem ipsum dolor sit amet.</p>
     
     </body>
 </html>
+
