--- a/2boxModel/border.html
+++ b/2boxModel/border.html
@@ -30,10 +30,17 @@
                 background-color: #be69a5;  
             }
 
-            .destaque{
+            .borda{
                 background-color: orange;
                 border: 10px solid black;
             }
+
+            .outline{
+                outline: black;
+                outline-style: solid;
+                outline-width: 5px;
+            }
+
         </style>
     </head>
     <body>
@@ -43,10 +50,10 @@
 
         <p> Lorem ipsum dolor sit amet.</p>
         
-        <p class="destaque"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo eaque pariatur nesciunt temporibus praesentium tempore magni, distinctio asperiores dolor, optio quod ipsam commodi eveniet amet officiis, non ea? Ipsum, molestiae rerum nobis nam fugit quae consequatur sequi aspernatur repellendus perspiciatis mollitia beatae, id nisi! Corrupti, possimus voluptatem. Quos, ipsum ad.
+        <p class="borda"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo eaque pariatur nesciunt temporibus praesentium tempore magni, distinctio asperiores dolor, optio quod ipsam commodi eveniet amet officiis, non ea? Ipsum, molestiae rerum nobis nam fugit quae consequatur sequi aspernatur repellendus perspiciatis mollitia beatae, id nisi! Corrupti, possimus voluptatem. Quos, ipsum ad.
         </p>
         
-        <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate id maiores exercitationem, ducimus vel corporis cumque eveniet eaque nihil non.</p>
+        <p class=" titulo outline"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate id maiores exercitationem, ducimus vel corporis cumque eveniet eaque nihil non.</p>
 
         <h1> Box Model</h1>
 
