--- a/boxModel/Desafio.html
+++ b/boxModel/Desafio.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title> Curriculo </title>
-        <link rel="stylesheet" href="desafio2.css">
+        <link rel="stylesheet" href="Desafio.css">
     </head>
     
     <body>
