--- a/flexBox/flexBox.html
+++ b/flexBox/flexBox.html
@@ -19,10 +19,21 @@
             }
 
             .flex-container1{
-                flex-flow: row wrap;
+                flex-flow: row ;
             }
 
+            .flex-container2{
+                justify-content: flex-start;
+                align-items: flex-end;
+                flex-direction: column;
+            }
 
+            .flex-container2 div{
+                background-color: yellow;
+                width: 50px;
+                height: 50px;
+
+            } 
         </style>
     </head>
 
